--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,10 +1,319 @@
-// .container {
-//     display: grid;
-//     width: 100%;
-//     margin: 0 auto;
-//     grid-template-columns: repeat(12, 1fr);
-//     grid-column-gap: .5em;
-// }
+@import url("https://fonts.googleapis.com/css2?family=BioRhyme:wght@400;700&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=BioRhyme:wght@400;700&family=Rubik:wght@400;500;600;700&display=swap");
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-family: Rubik;
+  font-style: normal;
+  font-weight: normal;
+  color: #ffffff;
+  background: url("../images/hex-stylish.png");
+  font-size: 16px;
+  line-height: 24px;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+h1 {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 57px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.wrapper {
+  min-height: 100vh;
+  padding-bottom: 84px;
+  position: relative;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background: url("../images/hex-stylish.png");
+  align-items: center;
+  margin-left: 10px;
+  z-index: 10;
+}
+
+li {
+  list-style: none;
+}
+
+header .title {
+  font-family: BioRhyme;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 31px;
+}
+
+nav {
+  position: relative;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav ul li {
+  margin-right: 30px;
+}
+
+nav ul li .nav-link {
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 10px 0;
+}
+
+nav ul li .nav-link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #fff;
+  transition: width 0.5s;
+}
+
+nav ul li .nav-link.active::after {
+  width: 100% !important;
+}
+
+nav ul li .nav-link:hover::after {
+  width: 100%;
+}
+
+img {
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.main-content {
+  display: flex;
+  align-items: center;
+  min-height: calc(100vh - 84px);
+  padding-top: 100px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 32px;
+}
+
+.hero-image {
+  display: flex;
+}
+
+input,
+textarea {
+  background: transparent;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #cdd5d3;
+  padding: 10px;
+}
+
+textarea {
+  resize: none;
+}
+
+.btn {
+  background: #293531;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+footer .footer-link {
+  width: 36px;
+  height: 36px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+footer .footer-link:hover {
+  background: rgba(41, 53, 49, 0.72);
+}
+
+.mr-20 {
+  margin-right: 20px;
+}
+
+.hero-title {
+  color: #293531;
+  margin-bottom: 24px;
+}
+
+.hero-quote {
+  color: #cdd5d3;
+}
+
+.hero-link {
+  color: rgba(41, 53, 49, 0.74);
+  padding: 6px 0;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(41, 53, 49, 0.74);
+}
+
+.menu-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+@media (max-width: 576px) {
+  header {
+    margin-left: 10px;
+    width: calc(100% - 20px);
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    padding: 10px;
+  }
+  nav ul {
+    // display: none;
+    position: absolute;
+    top: 20px;
+    right: 0;
+    flex-direction: column;
+    background: #000;
+    padding: 0 10px;
+    width: 200px;
+    height: 0;
+    overflow: hidden;
+    transition: 0.3s ease-out;
+  }
+  nav ul.show {
+    height: 184px;
+  }
+  nav ul li {
+    padding: 10px;
+  }
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+  header {
+    max-width: 540px;
+    margin-left: calc((100vw - 540px) / 2);
+  }
+}
+
+@media (min-width: 769px) {
+  .container {
+    max-width: 720px;
+  }
+  header {
+    max-width: 720px;
+    margin-left: calc((100vw - 720px) / 2);
+  }
+  .menu-icon {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+  header {
+    max-width: 960px;
+    margin-left: calc((100vw - 960px) / 2);
+  }
+  .hero-image {
+    justify-content: flex-end;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+  header {
+    max-width: 1140px;
+    margin-left: calc((100vw - 1140px) / 2);
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1320px;
+  }
+  header {
+    max-width: 1320px;
+    margin-left: calc((100vw - 1320px) / 2);
+  }
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
 
 .row {
   display: flex;
@@ -32,6 +341,14 @@ $index: 4;
   .pb-#{$i} {
     padding-bottom: $i * 8px;
   }
+  .px-#{$i} {
+    padding-left: $i * 8px;
+    padding-right: $i * 8px;
+  }
+  .py-#{$i} {
+    padding-top: $i * 8px;
+    padding-bottom: $i * 8px;
+  }
   .m-#{$i} {
     margin: $i * 8px;
   }
@@ -47,7 +364,95 @@ $index: 4;
   .mb-#{$i} {
     margin-bottom: $i * 8px;
   }
+  .mx-#{$i} {
+    margin-left: $i * 8px;
+    margin-right: $i * 8px;
+  }
+  .my-#{$i} {
+    margin-top: $i * 8px;
+    margin-bottom: $i * 8px;
+  }
 }
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12,
+.col-xs-1,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12,
+.col-sm-1,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-md-1,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-lg-1,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-xl-1,
+.col-xl-2,
+.col-xl-3,
+.col-xl-4,
+.col-xl-5,
+.col-xl-6,
+.col-xl-7,
+.col-xl-8,
+.col-xl-9,
+.col-xl-10,
+.col-xl-11,
+.col-xl-12 {
+  position: relative;
+  width: 100%;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-bottom: 10px;
+}
+
 $columns: 12;
 
 @for $i from 1 through $columns {
@@ -55,29 +460,45 @@ $columns: 12;
     width: $i/$columns * 100%;
     flex: 0 0 auto;
   }
+}
 
-  @media (min-width: 1200px) {
-    .col-xl-#{$i} {
+@media (max-width: 576px) {
+  @for $i from 1 through $columns {
+    .col-xs-#{$i} {
       width: $i/$columns * 100%;
       flex: 0 0 auto;
     }
   }
+}
 
-  @media (min-width: 992px) {
-    .col-lg-#{$i} {
+@media (min-width: 576px) {
+  @for $i from 1 through $columns {
+    .col-sm-#{$i} {
       width: $i/$columns * 100%;
       flex: 0 0 auto;
     }
   }
+}
 
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
+  @for $i from 1 through $columns {
     .col-md-#{$i} {
       width: $i/$columns * 100%;
       flex: 0 0 auto;
     }
   }
-  @media (min-width: 576px) {
-    .col-sm-#{$i} {
+}
+@media (min-width: 992px) {
+  @for $i from 1 through $columns {
+    .col-lg-#{$i} {
+      width: $i/$columns * 100%;
+      flex: 0 0 auto;
+    }
+  }
+}
+@media (min-width: 1200px) {
+  @for $i from 1 through $columns {
+    .col-xl-#{$i} {
       width: $i/$columns * 100%;
       flex: 0 0 auto;
     }
