--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -57,7 +57,6 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 10px;
   z-index: 10;
 }
 
@@ -135,7 +134,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   min-height: calc(100vh - 84px);
-  padding-top: 100px;
+  padding-top: 70px;
 }
 
 .form-group {
@@ -162,6 +161,7 @@ textarea {
   border: none;
   border-bottom: 1px solid #cdd5d3;
   padding: 10px;
+  font-size: 16px;
 }
 
 textarea {
@@ -242,15 +242,11 @@ footer .footer-link:hover {
 
 @media (max-width: 576px) {
   header {
-    margin-left: 10px;
-    width: calc(100% - 20px);
+    padding: 15px;
   }
 }
 
 @media (max-width: 768px) {
-  header {
-    padding: 10px;
-  }
   nav ul {
     position: absolute;
     top: 20px;
@@ -275,13 +271,25 @@ footer .footer-link:hover {
   }
 }
 
+@media (max-width: 991px) {
+  .mobile-flex-reverse {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
   header {
-    max-width: 540px;
-    margin-left: calc((100vw - 540px) / 2);
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: calc((100vw - 540px) / 2);
+    padding-left: calc((100vw - 540px) / 2);
   }
 }
 
@@ -290,11 +298,15 @@ footer .footer-link:hover {
     max-width: 720px;
   }
   header {
-    max-width: 720px;
-    margin-left: calc((100vw - 720px) / 2);
+    margin: 0;
+    padding-right: calc((100vw - 720px) / 2);
+    padding-left: calc((100vw - 720px) / 2);
   }
   .menu-icon {
     display: none;
+  }
+  .main-content {
+    padding-top: 50px;
   }
 }
 
@@ -303,13 +315,17 @@ footer .footer-link:hover {
     max-width: 960px;
   }
   header {
-    max-width: 960px;
-    margin-left: calc((100vw - 960px) / 2);
+    margin: 0;
+    padding-right: calc((100vw - 960px) / 2);
+    padding-left: calc((100vw - 960px) / 2);
   }
   .hero-image {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+  }
+  .main-content {
+    padding-top: 100px;
   }
 }
 
@@ -318,8 +334,9 @@ footer .footer-link:hover {
     max-width: 1140px;
   }
   header {
-    max-width: 1140px;
-    margin-left: calc((100vw - 1140px) / 2);
+    margin: 0;
+    padding-right: calc((100vw - 1140px) / 2);
+    padding-left: calc((100vw - 1140px) / 2);
   }
 }
 
@@ -328,8 +345,9 @@ footer .footer-link:hover {
     max-width: 1320px;
   }
   header {
-    max-width: 1320px;
-    margin-left: calc((100vw - 1320px) / 2);
+    margin: 0;
+    padding-left: calc((100vw - 1320px) / 2);
+    padding-right: calc((100vw - 1320px) / 2);
   }
 }
 
