--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -47,7 +47,7 @@ p {
 header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   background: url("../images/hex-stylish.png");
