--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@ p {
 header {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
