--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,11 +6,14 @@
 ::after,
 ::before {
   box-sizing: border-box;
+  // max-width: 100vw;
+  // overflow-x: hidden;
 }
 
 body {
   margin: 0;
   width: 100%;
+  // max-width: 100vw;
   height: 100%;
   font-family: Rubik;
   font-style: normal;
@@ -47,6 +50,7 @@ p {
 header {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100vw;
   display: flex;
   justify-content: space-between;
@@ -205,6 +209,15 @@ footer .footer-link:hover {
   cursor: pointer;
 }
 
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+
+}
+
 @media (max-width: 576px) {
   header {
     padding: 15px;
@@ -232,6 +245,10 @@ footer .footer-link:hover {
   }
   nav ul.show {
     height: 184px;
+    width: 200px;
+  }
+  nav ul li {
+    margin: auto !important;
   }
   nav ul li {
     padding: 10px;
