--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -30,6 +30,16 @@ h3 {
   line-height: 28px;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
+h2 {
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 36px;
+}
+
 h1 {
   font-weight: 500;
   font-size: 48px;
@@ -157,6 +167,13 @@ textarea {
   background: #293531;
   border-radius: 10px;
   cursor: pointer;
+  color: white;
+  font-size: 18px;
+  outline: none;
+}
+
+.btn:hover {
+  background: #2a302e;
 }
 
 footer {
@@ -201,6 +218,7 @@ footer .footer-link:hover {
   padding: 6px 0;
   text-decoration: none;
   border-bottom: 2px solid rgba(41, 53, 49, 0.74);
+  font-weight: bold;
 }
 
 .menu-icon {
@@ -209,21 +227,17 @@ footer .footer-link:hover {
   cursor: pointer;
 }
 
-.mask {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-
-}
-
 @media (max-width: 576px) {
   header {
     padding: 15px;
     // width: calc(100% - 20px);
   }
-  
+}
+
+@media (min-width: 769px) {
+  .mask {
+    display: none;
+  }
 }
 
 @media (max-width: 768px) {
@@ -232,26 +246,37 @@ footer .footer-link:hover {
   // }
   nav ul {
     // display: none;
-    position: absolute;
-    top: 20px;
-    right: 0;
+    position: fixed;
+    margin: 0;
+    top: 0;
+    left: 0;
     flex-direction: column;
     background: #000;
-    padding: 0 10px;
-    width: 200px;
-    height: 0;
+    padding: 40px 0;
+    width: 0;
+    height: 100vh;
     overflow: hidden;
     transition: 0.3s ease-out;
+    display: flex;
+    align-items: center;
   }
   nav ul.show {
-    height: 184px;
-    width: 200px;
-  }
-  nav ul li {
-    margin: auto !important;
+    width: 100%;
   }
   nav ul li {
     padding: 10px;
+    margin: 0;
+  }
+  .mask {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: 10px;
+    overflow: hidden;
+    max-width: 100vw !important;
+    // height: 100vh;
+    // width: 100%;
   }
 }
 
@@ -348,6 +373,10 @@ footer .footer-link:hover {
 
 .justify-content-end {
   justify-content: flex-end;
+}
+
+.justify-content-between {
+  justify-content: space-between;
 }
 
 .justify-content-center {
