--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -265,51 +265,40 @@ footer .footer-link:hover {
   }
 }
 
-@media (min-width: 769px) {
-  .mask {
-    display: none;
-  }
-}
-
 @media (max-width: 768px) {
   nav ul {
-    position: fixed;
-    margin: 0;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 20px;
+    right: 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background: #000;
-    padding: 40px 0;
-    width: 0;
-    height: 100vh;
+    background: #293531;
+    padding: 0 10px;
+    width: 200px;
+    height: 0;
     overflow: hidden;
+    border-radius: 12px;
     -webkit-transition: 0.3s ease-out;
     transition: 0.3s ease-out;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
   nav ul.show {
-    width: 100%;
+    height: 184px;
+    width: 200px;
+  }
+  nav ul li {
+    margin: auto !important;
   }
   nav ul li {
     padding: 10px;
-    margin: 0;
   }
   .mask {
     position: fixed;
     top: 0;
-    right: 0;
-    z-index: 2;
-    padding: 10px;
-    overflow: hidden;
-    max-width: 100vw !important;
+    left: 0;
+    height: 100vh;
+    width: 100%;
   }
 }
 
