--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -227,17 +227,14 @@ footer .footer-link:hover {
   cursor: pointer;
 }
 
+
+
 @media (max-width: 576px) {
   header {
     padding: 15px;
     // width: calc(100% - 20px);
   }
-}
-
-@media (min-width: 769px) {
-  .mask {
-    display: none;
-  }
+  
 }
 
 @media (max-width: 768px) {
@@ -246,37 +243,35 @@ footer .footer-link:hover {
   // }
   nav ul {
     // display: none;
-    position: fixed;
-    margin: 0;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 20px;
+    right: 0;
     flex-direction: column;
-    background: #000;
-    padding: 40px 0;
-    width: 0;
-    height: 100vh;
+    background: #293531;
+    padding: 0 10px;
+    width: 200px;
+    height: 0;
     overflow: hidden;
+    border-radius: 12px;
     transition: 0.3s ease-out;
-    display: flex;
-    align-items: center;
   }
   nav ul.show {
-    width: 100%;
+    height: 184px;
+    width: 200px;
+  }
+  nav ul li {
+    margin: auto !important;
   }
   nav ul li {
     padding: 10px;
-    margin: 0;
   }
   .mask {
     position: fixed;
     top: 0;
-    right: 0;
-    z-index: 2;
-    padding: 10px;
-    overflow: hidden;
-    max-width: 100vw !important;
-    // height: 100vh;
-    // width: 100%;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+  
   }
 }
 
