--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -221,6 +221,15 @@ footer .footer-link:hover {
   font-weight: bold;
 }
 
+a {
+  color: rgba(41, 53, 49, 0.74);
+  padding: 6px 0;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .menu-icon {
   display: flex;
   align-items: center;
